--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,19 @@
   --TitleColor : #1c1b1b;
   --SubtitleColor : #474646;
 }
+/* Font Start */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
   padding: 0%;
   margin: 0%;
   
 }
+.poppins {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+}
+/* Font End */
 .BodyRoot{
   position: relative;
   font-family: sans-serif;
@@ -89,6 +97,7 @@ nav{
 .Logo , .LightMode{
   margin: 0px 50px;
 }
+/* Dashboard  */
 dashboard{  
   display: grid;
   gap: 20px;
@@ -103,7 +112,7 @@ dashboard{
 .TasksManagement{
   background-color: white;
   grid-area: TasksManagement;
-  
+  padding: 0px 20px;
 }
 .TodayYesterdaySpend{
   height: 300px;
@@ -126,10 +135,71 @@ dashboard{
   height: 200px;
 }
 .Table table{
-  background-color: red;
+  /* background-color: rgb(141, 62, 62); */
   width: 100%;
 }
+table, th, td {
+  border: none;
+}
+th{
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgba(92, 92, 92, 0.589);
+}
 
+
+  
+.special-row {
+  border-bottom: 2px solid black;
+}
+thead th{
+  text-align: left;
+  font-weight: 500;
+}
+td{
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.349);
+}
+thead{
+  border-bottom: 2px solid black;
+}
+.MemberImage {
+  width: 37px;
+  height: 100%;
+}
+.MemberImage img{ 
+  width:50px;
+  height:50px;
+  border-radius: 5px;
+}
+.MemberImage div{
+  padding: 8px 15px 8px 0px;
+  width: 50px;height: 100%;background-color: rgba(255, 0, 0, 0);display: flex;flex-flow: column;justify-content: center;place-items: center;
+}
+.TitleTaskManager{
+  padding: 20px 0px;
+  background-color: rgba(255, 0, 0, 0);
+}
+.TitleTaskManager h3{
+  font-size: 18px;
+}
+.MemberName h3{
+  font-size: 1rem;
+}
+.MemberTask{
+  /* background-color: blueviolet; */
+}
+.MemberTask div{
+  background-color: rgba(255, 0, 0, 0.411);
+  width: fit-content;
+  padding: 5px 10px;
+  border-radius: 50px;
+  font-size: .8rem;
+  color: red;
+}
+.MemberRate{
+  color: red;
+}
 
 @media only screen and (max-width: 1128px) {
   dashboard{
