--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,9 @@
 .BodyRoot{
   position: relative;
   font-family: sans-serif;
-  
-  height: 100vh;
 }
 nav{
-  margin: 20px 0px 50px;
+  margin: 20px 0px 30px;
   display: grid;
   place-items: center;
 }
@@ -107,8 +105,10 @@ dashboard{
 .TasksManagement{
   background-color: white;
   padding: 0px 20px;
-  resize: both;
-  overflow: hidden;
+  border-radius: 10px;
+  height: fit-content;
+  padding-bottom: 10px;
+  width: 430px;
 }
 .TodayYesterdaySpend{
   background-color: white;
@@ -125,6 +125,7 @@ dashboard{
 .Table table{
   /* background-color: rgb(141, 62, 62); */
   width: 100%;
+  margin-top: 15px;
 }
 table, th, td {
   border: none;
@@ -132,6 +133,7 @@ table, th, td {
 th{
   padding-bottom: 10px;
   border-bottom: 1px solid rgba(92, 92, 92, 0.589);
+  font-size: smaller;
 }
 
 
@@ -146,22 +148,24 @@ thead th{
 td{
   font-family: "Poppins", sans-serif;
   font-style: normal;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.349);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.219);
 }
-thead{
-  border-bottom: 2px solid black;
+.Table Table tbody tr:nth-child(4){
+  border: none;
 }
+.noBorder{
+  border-bottom: none}
 .MemberImage {
   width: 37px;
   height: 100%;
 }
 .MemberImage img{ 
-  width:50px;
-  height:50px;
+  width:32px;
+  height:32px;
   border-radius: 5px;
 }
 .MemberImage div{
-  padding: 8px 15px 8px 0px;
+  padding: 8px 5px 8px 0px;
   width: 50px;height: 100%;background-color: rgba(255, 0, 0, 0);display: flex;flex-flow: column;justify-content: center;place-items: center;
 }
 .TitleTaskManager{
@@ -173,22 +177,64 @@ thead{
 }
 .MemberName h3{
   font-size: 1rem;
-  font-family: 'Courier New', Courier, monospace;
+  font-size: smaller;
 }
 .MemberTask{
   /* background-color: blueviolet; */
 }
-.MemberTask div{
+.MemberTaskOutside div{
   background-color: rgba(255, 0, 0, 0.411);
   width: fit-content;
   padding: 5px 10px;
   border-radius: 50px;
-  font-size: .8rem;
+  font-size: .7rem;
   color: red;
+}
+.MemberTaskWashing div{
+  background-color: rgba(87, 255, 87, 0.411);
+  width: fit-content;
+  padding: 5px 10px;
+  border-radius: 50px;
+  font-size: .7rem;
+  color: rgb(104, 255, 23);
+}
+.MemberTaskCleaning div{
+  background-color: rgba(146, 146, 146, 0.411);
+  width: fit-content;
+  padding: 5px 10px;
+  border-radius: 50px;
+  font-size: .7rem;
+  color: rgb(37, 37, 37);
+}
+.MemberTaskOther div{
+  background-color: rgba(239, 246, 52, 0.411);
+  width: fit-content;
+  padding: 5px 10px;
+  border-radius: 50px;
+  font-size: .7rem;
+  color: rgb(255, 227, 43);
 }
 .MemberRate{
   color: red;
+  font-size: smaller;
 }
+
+.rateLow{
+  color: red;
+}
+
+.rateMeduim{
+  color: rgb(255, 242, 0);
+  
+}
+.rateHigh{
+  color: rgb(0, 255, 0);
+  
+}
+
+
+
+
 
 @media only screen and (max-width: 1128px) {
 
