--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@
   --TitleColor : #1c1b1b;
   --SubtitleColor : #474646;
 }
-/* Font Start */
 
+/* Fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
   padding: 0%;
@@ -16,11 +16,13 @@
   font-family: "Poppins", sans-serif;
   font-style: normal;
 }
-/* Font End */
+
 .BodyRoot{
   position: relative;
   font-family: sans-serif;
 }
+
+/* Style Up Bar  */
 nav{
   margin: 20px 0px 30px;
   display: grid;
@@ -41,6 +43,8 @@ nav{
   border: 1px solid rgb(208, 208, 208);
   border-radius: 50px;
 }
+
+/* Style Of Menu Bar ( dashboard , tasks , box ) */
 .Menu{
   display: flex;
   gap: 30px;
@@ -63,7 +67,6 @@ nav{
   text-align: center;
   position: absolute;
   left: 50%;
-
 }
 .Option:hover.Option::after {
   width: 100%;
@@ -88,11 +91,13 @@ nav{
   background-color: rgb(0, 0, 0);
   transform: translateY(26px);
   transition: .2s;
-
 }
+
+/* Logo Style */
 .Logo , .LightMode{
   margin: 0px 50px;
-}
+} 
+
 /* Dashboard  */
 dashboard{
   display: grid;
@@ -101,142 +106,7 @@ dashboard{
   margin-block: 15px;
   margin-inline: 80px;
 }
-
-.TasksManagement{
+.Calendar ,.PieChart, .LineChart , .TodayYesterdaySpend , .TasksManagement{
   background-color: white;
-  padding: 0px 20px;
-  border-radius: 10px;
-  height: fit-content;
-  padding-bottom: 10px;
-  width: 430px;
-}
-.TodayYesterdaySpend{
-  background-color: white;
-}
-.Calendar{
-  background-color: white;
-}
-.PieChart{
-  background-color: white;
-}
-.LineChart{
-  background-color: white;
-}
-.Table table{
-  /* background-color: rgb(141, 62, 62); */
-  width: 100%;
-  margin-top: 15px;
-}
-table, th, td {
-  border: none;
-}
-th{
-  padding-bottom: 10px;
-  border-bottom: 1px solid rgba(92, 92, 92, 0.589);
-  font-size: smaller;
-}
-
-
-  
-.special-row {
-  border-bottom: 2px solid black;
-}
-thead th{
-  text-align: left;
-  font-weight: 500;
-}
-td{
-  font-family: "Poppins", sans-serif;
-  font-style: normal;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.219);
-}
-.Table Table tbody tr:nth-child(4){
-  border: none;
-}
-.noBorder{
-  border-bottom: none}
-.MemberImage {
-  width: 37px;
-  height: 100%;
-}
-.MemberImage img{ 
-  width:32px;
-  height:32px;
   border-radius: 5px;
-}
-.MemberImage div{
-  padding: 8px 5px 8px 0px;
-  width: 50px;height: 100%;background-color: rgba(255, 0, 0, 0);display: flex;flex-flow: column;justify-content: center;place-items: center;
-}
-.TitleTaskManager{
-  padding: 20px 0px;
-  background-color: rgba(255, 0, 0, 0);
-}
-.TitleTaskManager h3{
-  font-size: 18px;
-}
-.MemberName h3{
-  font-size: 1rem;
-  font-size: smaller;
-}
-.MemberTask{
-  /* background-color: blueviolet; */
-}
-.MemberTaskOutside div{
-  background-color: rgba(255, 0, 0, 0.411);
-  width: fit-content;
-  padding: 5px 10px;
-  border-radius: 50px;
-  font-size: .7rem;
-  color: red;
-}
-.MemberTaskWashing div{
-  background-color: rgba(87, 255, 87, 0.411);
-  width: fit-content;
-  padding: 5px 10px;
-  border-radius: 50px;
-  font-size: .7rem;
-  color: rgb(104, 255, 23);
-}
-.MemberTaskCleaning div{
-  background-color: rgba(146, 146, 146, 0.411);
-  width: fit-content;
-  padding: 5px 10px;
-  border-radius: 50px;
-  font-size: .7rem;
-  color: rgb(37, 37, 37);
-}
-.MemberTaskOther div{
-  background-color: rgba(239, 246, 52, 0.411);
-  width: fit-content;
-  padding: 5px 10px;
-  border-radius: 50px;
-  font-size: .7rem;
-  color: rgb(255, 227, 43);
-}
-.MemberRate{
-  color: red;
-  font-size: smaller;
-}
-
-.rateLow{
-  color: red;
-}
-
-.rateMeduim{
-  color: rgb(255, 242, 0);
-  
-}
-.rateHigh{
-  color: rgb(0, 255, 0);
-  
-}
-
-
-
-
-
-@media only screen and (max-width: 1128px) {
-
-  
 }
