--- a/src/App.css
+++ b/src/App.css
@@ -4,22 +4,20 @@
   --TitleColor : #1c1b1b;
   --SubtitleColor : #474646;
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
-/* Fonts*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
   padding: 0%;
   margin: 0%;
   
 }
-.poppins {
-  font-family: "Poppins", sans-serif;
-  font-style: normal;
-}
+
 
 .BodyRoot{
   position: relative;
   font-family: sans-serif;
+  font-family: Poppins;
+  font-weight: 800;
 }
 
 /* Style Up Bar  */
@@ -108,5 +106,7 @@ dashboard{
 }
 .Calendar ,.PieChart, .LineChart , .TodayYesterdaySpend , .TasksManagement{
   background-color: white;
-  border-radius: 5px;
+  border-radius:8px;
+  box-shadow:0px 10px 15px #c1c1c1;
+
 }
