--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@ dashboard{
   margin-block: 15px;
   margin-inline: 80px;
 }
-.Calendar ,.PieChart, .LineChart , .TodayYesterdaySpend , .TasksManagement{
+.Calendar ,.PieChart, .LineChart , .TasksManagement{
   background-color: white;
   border-radius:8px;
   box-shadow:0px 10px 15px #c1c1c1;
