--- a/src/AppMobile.css
+++ b/src/AppMobile.css
@@ -4,15 +4,19 @@
         transition: all 0.4s;
       }
       .LineChart{
-        grid-column: span 0;
+        grid-column: span 2 ;
       }
 }
-@media screen and (max-width : 375px) {
+@media screen and (max-width : 1000px) {
     dashboard{
         grid-template-columns: repeat(1, 1fr); 
         transition: all 0.4s;
       }
       .LineChart{
-        grid-column: span 0;
+        grid-column-start: 0;
+      }
+      .Calendar{
+        background-color: transparent;
+
       }
 }
