--- a/src/Layout/Style/TasksManagerList.css
+++ b/src/Layout/Style/TasksManagerList.css
@@ -32,7 +32,7 @@ color: rgb(0, 255, 0);
     padding: 0px 20px;
     height: fit-content;
     padding-bottom: 10px;
-    width: 500px;
+    width: clamp(auto , 500px , 100%) ;
   }
   
 .Table table{
