--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,8 @@ nav{
 /* Dashboard  */
 dashboard{
   display: grid;
-  grid-template-columns: repeat(3 , 1fr);
+  grid-template-areas: "tasklist cards calendar" 
+  "linecha linecha piecha" ;  
   gap: 15px;
   margin-block: 15px;
   margin-inline: 80px;
@@ -112,4 +113,19 @@ dashboard{
   border-radius:8px;
   box-shadow:0px 10px 15px #c1c1c1;
 
+}
+.TasksManagement{
+  grid-area: tasklist ;
+}
+.Calendar{
+  grid-area: calendar ;
+}
+.TodayYesterdaySpend{
+  grid-area: cards ;
+}
+.PieChart{
+  grid-area: piecha ; 
+}
+.LineChart{
+  grid-area: linecha ;
 }
