--- a/src/Component/Style/slidebar.css
+++ b/src/Component/Style/slidebar.css
@@ -16,7 +16,7 @@
 }
 .slidebarleft{
     width: 100%;
-    height: 100svh;
+    height: 100%;
     background-color: rgba(63, 92, 140, 0.365);
     backdrop-filter: blur(5px);
     border-right: 1px solid #c4c4c4;
