--- a/src/Component/Box/BoxStyle.css
+++ b/src/Component/Box/BoxStyle.css
@@ -10,8 +10,10 @@
   min-height: 80vh;
 }
 
-.tablelistatsks{
+.BoxList{
   min-height: 80vh;
+  background-color: white;
+  border-radius: 8px;
 }
 
 .BoxContainer .BoxList .Head{
@@ -91,6 +93,14 @@
 .InputInfo input{
   height: 30px;
   min-width: 300px;
+  border: 1px solid rgb(128, 121, 121);
+  padding-inline: 10px;
+  border-radius: 8px;
+  padding-block: 4px;
+}
+.InputInfo input:focus{
+  border: 1px solid rgb(78, 74, 74);
+
 }
 
 .AddUpdateOpenH{
